    - Middle-clicking an object will open that object in a new window
    - Search and information have been separated into separate GUIs
    - You can open as many information windows as you want simultaneously
  Changes:
    - Recipe time-to-craft is now displayed in a generic info table, rather than as a fake ingredient
  Bugfixes:
    - Fixed that recipe "made in" didn't account for ingredient count limits on assemblers
    - Fixed that rocket launch products were always marked as their own payload
    - Fixed that rocket launch products weren't being shown in many places due to invalid recipe categories
---------------------------------------------------------------------------------------------------
Version: 2.7.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.7.1
Date: 2021-05-03
  Bugfixes:
    - Fixed a crash when a new force was created
---------------------------------------------------------------------------------------------------
Version: 2.7.0
Date: 2021-05-03
  Features:
    - Added an option to show disabled recipes and technologies
    - Added indicators for when a recipe or technology is disabled
    - Added researched state for labs and offshore pumps
  Changes:
    - Disabled recipes and technologies are hidden by default
    - When a fluid has multiple temperatures, the default temperature will be displayed for fluid products that usually have no temperature
  Bugfixes:
    - Fixed a crash when using the hotkey on a science lab
    - Fixed fluids not being enabled at start even if their offshore pump was
    - Fixed fluid temperature variants not copying recipe categories from their parents
    - Fixed fluid variant ingredient in lists being completely wrong in most cases
    - Fixed several inconsistencies with fluid temperature variation researched status
---------------------------------------------------------------------------------------------------